--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,59 @@
 
+.wholebody{
+  padding:0px 100px;
+
+}
+body{
+
+  margin: 30px;
+}
+h1{
+  background-color: pink;
+  text-align: center;
+  font-family: 'Dosis', sans-serif; 
+  margin-bottom: 50px;
+  font-weight: 800;
+}
+.toDoIcon{
+  font-size: 35px !important;
+}
+h6{
+  font-size: 20px;
+  font-weight: 200;
+  font-family: 'Dosis', sans-serif; 
+}
+.container{
+  width: 100%;
+ 
+}
+.input-form{
+  border: 1px rgb(175, 175, 175) solid;
+  border-radius: 5px;
+  padding: 5px;
+}
+.form-control:focus {
+  border-color: pink;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px pink;
+}
+.input-group{
+  width:100%;
+  margin-bottom: 30px;
+}
+.btn-success{
+  background-color: pink !important;
+  color:black !important;
+  border: 1px pink solid;
+}
+.btn-success:hover{
+  border-color: pink;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px pink;
+}
+h5{
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Dosis', sans-serif; 
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -6,12 +61,51 @@
   'GRAD' 0,
   'opsz' 24;
   color: black;
-  
+  font-size: 18px;
+  position: relative;
+  top: 3px;
 
 }
-.row{
-    border: 1px grey solid;
+.yourTaskswhole{
+border-radius: 10px;
+height: 100%;
+background-color: pink;}
+h5{
+  background-color: rgb(47, 2, 131);
+  color :white;
+  text-align: center;
+  padding: 10px 20px;
 }
-.delete {
-	display: none;
+.row{
+    border-bottom: 0.5px rgb(241, 241, 241) solid;
+    
+   
+   padding-left: 20px;
+   margin: 10px;
+}
+.delete{
+  width: 100%;
+  color: rgb(140, 0, 255);
+
+}
+.delete-button{
+  background-color: white;
+  padding:0px;
+  border: none;
+  transition: all 200ms ease-in-out;
+  background-color: unset;
+}
+.delete-button:hover{
+  background-color: white;
+  border:none;
+  
+}
+.form-check-input,.form-check-input:default, .form-check-input:active {
+  box-shadow: none !important;
+  
+}
+.form-check-input:checked{
+  background-color: rgb(119, 0, 255) !important;
+  border:none;
+  box-shadow: none;
 }
