--- a/styles.css
+++ b/styles.css
@@ -109,3 +109,22 @@ h5{
   border:none;
   box-shadow: none;
 }
+footer{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 200;
+  font-family: 'Dosis', sans-serif; 
+  margin-top: 50px;
+  
+}
+a{
+  text-decoration: none;
+  color: black;
+  transition: all 200ms ease-in-out;
+
+}
+a:hover{
+  color:pink;
+  cursor: pointer;
+  text-decoration: underline;
+}
